# hpc_pipeline

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MakeFile  Makefile  README.md  orchestrator.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  gpu-tests.yml  phase4-validation.yml
benchmarking/: kaplan_scaling.py  roofline_analysis.py
chaos/: chaos_monkey.py
charts/hpc-training/: Chart.yaml  values.yaml
charts/hpc-training/templates/: deployment.yaml
configs/: deepspeed_zero3.json  default_config.yaml  engineering_spec.yaml  engineering_status.yaml  k8s_job.yaml  slurm_job.sh
configs/alerting/: alertmanager.yaml  prometheus_rules.yaml
custom_kernels/: fused_bias_relu.cu  kernel_runner.py
data/: gpudirect_storage.py  pipeline.py
data_pipeline/: streaming_cache.py
distributed/: ddp_training.py  deepspeed_adapter.py  deepspeed_training.py
docs/: dashboard.html
docs/setup/: gpu-runner.md
fault_tolerance/: checkpoint_system.py  recovery_manager.py
helm/: values.yaml
helm/templates/: promtail-config.yaml  promtail.yaml
infra/helm/hpc-pipeline/: Chart.yaml  values.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
monitoring/: kernel_monitor.py
observability/: gpu_telemetry.py  monitoring_stack.py  telemetry_agent.py
optimization/: amp_training.py  custom_kernels.cu  custom_kernels.h  custom_kernels.py  kernel_benchmark.py  kernels.cpp
orchestrator/: cli.py
profiling/: profiler.py  pytorch_profiler.py
scripts/: run_test_suite.sh  setup_gpu_runner.sh
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_amp_training.py  test_benchmarking.py  test_custom_kernels.py  test_data_pipeline.py  test_ddp_train.py  test_ddp_training.py  test_deepspeed_train.py  test_orchestrator.py  test_profiler.py  test_recovery_manager.py  test_roofline_analysis.py  test_streaming_cache.py  test_telemetry_agent.py  verify_production_readiness.py
tests/integration/: test_chaos_training.py  test_ddp_integration.py  test_deepspeed_integration.py  test_multinode_failure.py  test_multinode_stress.py  test_pipeline_end2end.py
tests/unit/: test_ddp_train.py  test_helpers.py  test_kernel_benchmark.py  test_monitoring.py  test_placeholder.py
(+6 files in other folders)
